# WebGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.txt  build.sh  global.h  main.c  webgpu-utils.c  webgpu-utils.h
.cache/clangd/index/: main.c.5D6A9A74CCAF5AA4.idx
webgpu/: webgpu.cmake
